--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
+  "name": "mcp-inspector-openrouter",
+  "version": "2.0.0",
+  "private": true,
+  "description": "Inspect, monitor, and execute WebMCP tools manually or with OpenRouter",
   "scripts": {
-    "postinstall": "cp ./node_modules/@google/genai/dist/web/index.mjs js-genai.js && rm -rf node_modules"
+    "build": "webpack --mode development",
+    "build:prod": "NODE_ENV=production webpack --mode production",
+    "dev": "webpack --mode development --watch",
+    "test": "vitest run",
+    "lint": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint 'src/**/*.ts' --fix",
+    "format": "prettier --write 'src/**/*.ts'",
+    "type-check": "tsc --noEmit"
   },
-  "dependencies": {
-    "@google/genai": "^1.38.0"
+  "devDependencies": {
+    "@types/chrome": "^0.0.287",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@vitest/coverage-v8": "^2.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "happy-dom": "^15.11.0",
+    "prettier": "^3.4.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "~5.7.0",
+    "vitest": "^2.1.0",
+    "webpack": "~5.97.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^6.0.1"
   }
 }
