--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "format": "prettier --write 'src/**/*.ts'",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start:server": "ts-node --esm src/server/index.ts"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.287",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vitest/coverage-v8": "^2.1.0",
@@ -26,6 +28,7 @@
     "happy-dom": "^15.11.0",
     "prettier": "^3.4.0",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.7.0",
     "vitest": "^2.1.0",
     "webpack": "~5.97.0",
@@ -33,7 +36,9 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "lit": "^3.3.2",
-    "onegenui-deep-agents": "file:../onecrawl"
+    "onegenui-deep-agents": "file:../onecrawl",
+    "ws": "^8.19.0"
   }
 }
